# ygcy-multiopen

./: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BulkImportDialog.tsx  ChangePasswordDialog.tsx  CreateEnvDialog.tsx  DebugTestButton.tsx  EnvDetailDialog.tsx  Sidebar.tsx
src/pages/: AuthPage.tsx  EnvironmentPage.tsx  LogPage.tsx  ProxyPage.tsx  StatsPage.tsx  SyncPage.tsx
src/stores/: rootStore.ts
src/styles/: globals.css
