[package]
name = "ygcy-multiopen"
version = "0.1.0"
description = "Tauri 2 + React + TypeScript + Vite frontend"
author = "you"
edition = "2021"

[lib]
name = "ygcy_multiopen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "io-util"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# 跨平台安全密钥存储